# code-sentinal-h

./: .codesentinel.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  codesentinel.yml  release.yml
action/: Dockerfile  __init__.py  action.yml  entrypoint.py
docs/: architecture.md  cli.md  configuration.md  contributing.md  getting-started.md  github-action.md  llm-providers.md  scm-integrations.md  writing-patterns.md
docs/superpowers/specs/: 2026-03-21-scm-providers-design.md
src/codesentinel/: __init__.py
src/codesentinel/cli/: __init__.py  config_commands.py  init_command.py  main.py  pattern_commands.py
src/codesentinel/config/: __init__.py  defaults.py  loader.py  schema.py
src/codesentinel/core/: __init__.py  context_builder.py  diff_parser.py  engine.py  enums.py  exceptions.py  file_classifier.py  models.py  pattern_matcher.py  post_processor.py  prompts.py
src/codesentinel/llm/: __init__.py  base.py  claude.py  ollama.py  openai_provider.py  rate_limiter.py
src/codesentinel/patterns/: __init__.py  loader.py  (+3 more)
tests/: conftest.py
tests/e2e/: test_cli_review.py
tests/integration/: test_engine_claude.py  test_engine_openai.py  test_github_reporter.py  test_github_scm.py
tests/unit/: test_azure_devops_pr_reporter.py  test_bitbucket_pr_reporter.py  test_builtin_patterns.py  test_claude_provider.py  test_cli.py  test_cli_commands.py  test_config_defaults.py  test_config_loader.py  test_config_schema.py  test_context_builder.py  test_diff_parser.py  test_engine.py  test_entrypoint.py  test_enums.py  test_file_classifier.py  test_github_pr_reporter.py  test_gitlab_mr_reporter.py  test_json_reporter.py  test_llm_base.py  test_ollama_provider.py  test_openai_provider.py  test_pattern_loader.py  test_pattern_matcher.py  test_pattern_registry.py  test_pattern_schema.py  test_pattern_validator.py  test_post_processor.py  test_prompts.py  test_rate_limiter.py  test_sarif_reporter.py  test_scm_azure_devops.py  test_scm_base.py  test_scm_bitbucket.py  test_scm_github.py  test_scm_gitlab.py  test_scm_local_git.py  test_terminal_reporter.py
(+49 files in other folders)
