[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codesentinel"
dynamic = ["version"]
description = "AI-powered code review tool that enforces architectural patterns and best practices"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Thando Mini", email = "tzone85@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "gitpython>=3.1.43",
    "rapidfuzz>=3.9.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "hatch>=1.12.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
codesentinel = "codesentinel.cli.main:app"

[project.urls]
Homepage = "https://github.com/tzone85/code-sentinal-h"
Repository = "https://github.com/tzone85/code-sentinal-h"

[tool.hatch.version]
path = "src/codesentinel/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/codesentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external API keys",
    "e2e: marks end-to-end tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["codesentinel"]
mypy_path = "src"

[tool.coverage.run]
source = ["codesentinel"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
